[metadata]
name = RANDOM
version = 1.0.0-a1
author = codinglah
author_email = codinglah@mail.com
description = RANDOM number, letter, and name picker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/codinglah/RANDOM
project_urls =
    Bug Tracker = https://github.com/codinglah/RANDOM/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSL-1.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src